get field pattern working, and debug newtonsoft json token stuff

--- a/src/Terumi.csproj
+++ b/src/Terumi.csproj
@@ -6,4 +6,8 @@
     <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3-beta1" />
+  </ItemGroup>
+
 </Project>
