--- a/src/Terumi.csproj
+++ b/src/Terumi.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Nett" Version="0.13.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3-beta1" />
+    <PackageReference Include="System.IO.Abstractions" Version="7.0.4" />
   </ItemGroup>
 
 </Project>
