delete classes, contracts, shell neutral - let's aim to just complete methods for now

--- a/src/Terumi.csproj
+++ b/src/Terumi.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Targets\Python\" />
+    <Folder Include="Targets\" />
   </ItemGroup>
 
 </Project>
