get RemoveAllUnreferencedMethodsOptimization working

--- a/src/Terumi.csproj
+++ b/src/Terumi.csproj
@@ -6,6 +6,10 @@
     <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>TRACE;JSON</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="LibGit2Sharp" Version="0.27.0-preview-0020" />
     <PackageReference Include="Nett" Version="0.13.0" />
